...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nothingCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="20dp"
                    android:background="@color/white"
...
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold">
                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mondayClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="20dp"
...
                    android:textColor="#000000"
                    android:textStyle="bold">

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tuesdayClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="20dp"
                    android:background="@color/white"
                    android:text="On Tuesday \n CS2100 LEC 1 @ 0800 - 1000\n CS3230 TUT 7 @ 1100 - 1200"
...
                    android:textColor="#000000"
                    android:textStyle="bold">

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/saturdayClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="20dp"
                    android:background="@color/white"
                    android:text="On Friday \n CS2100 LEC 1 @ 0800 - 1000\n CS3230 TUT 7 @ 1100 - 1200"
...

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Next"
            android:backgroundTint="@color/backGroundColorContrast"
            android:textStyle="bold"
...
            app:strokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.984"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
        <Button
            android:id="@+id/generateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/backGroundColorContrast"
...
            app:layout_constraintTop_toBottomOf="@+id/nextButton"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            tools:layout_editor_absoluteX="136dp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/backGroundColorContrast"
            android:text="Settings"
            android:textColor="@color/black"
...
