...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="460dp"
                android:background="@color/backGroundColor">

                <TextView
                    android:id="@+id/hiName"
                    android:layout_width="362dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="16dp"
                    android:autoSizeMaxTextSize="25sp"
                    android:autoSizeMinTextSize="8sp"
                    android:autoSizeTextType="uniform"
...
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="47dp"
                    android:layout_height="58dp"
                    app:backgroundTint="@color/backGroundColorContrast"
                    app:icon="@drawable/ic_signout_adobe_express"
                    app:iconGravity="top"
                    app:iconTint="@color/black"
...
                    app:layout_constraintStart_toEndOf="@+id/calendarImgView"
                    app:layout_constraintTop_toBottomOf="@+id/hiName"
                    app:strokeColor="@color/black"
                    app:strokeWidth="3dp" />

                <Button
                    android:id="@+id/generateTimetableButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="274dp"
                    android:layout_height="137dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="16dp"
                    android:autoSizeMaxTextSize="18sp"
...
